--- a/index.html
+++ b/index.html
@@ -1,34 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>n8n Tutorial em Português | Curso Completo de Automação | Jonathan da Cruz</title>
-    <meta name="description" content="Aprenda n8n do zero com o curso mais completo em português. Tutorial de automação, workflows, APIs e projetos práticos. Jonathan da Cruz ensina automação n8n." />
-    <meta name="author" content="Jonathan da Cruz" />
-    <meta name="keywords" content="n8n, automação, workflow, tutorial n8n, curso n8n, n8n português, automação de processos, integração API, zapier alternativa, n8n tutorial, jonathan da cruz, n8n brasil, automação empresarial" />
-    
-    <!-- Favicon -->
-    <link rel="icon" href="/lovable-uploads/favicon-jc.png" type="image/png" />
+<html lang="pt-BR">
 
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://jonathandacruz.com" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>n8n Tutorial em Português | Curso Completo de Automação | Jonathan da Cruz</title>
+  <meta name="description"
+    content="Aprenda n8n do zero com o curso mais completo em português. Tutorial de automação, workflows, APIs e projetos práticos. Jonathan da Cruz ensina automação n8n." />
+  <meta name="author" content="Jonathan da Cruz" />
+  <meta name="keywords"
+    content="n8n, automação, workflow, tutorial n8n, curso n8n, n8n português, automação de processos, integração API, zapier alternativa, n8n tutorial, jonathan da cruz, n8n brasil, automação empresarial" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="n8n Tutorial em Português | Curso Completo de Automação" />
-    <meta property="og:description" content="Aprenda n8n do zero com o curso mais completo em português. Tutorial de automação, workflows, APIs e projetos práticos." />
-    <meta property="og:url" content="https://jonathandacruz.com" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Favicon -->
+  <link rel="icon" href="/lovable-uploads/favicon-jc.png" type="image/png" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="n8n Tutorial em Português | Jonathan da Cruz" />
-    <meta property="twitter:description" content="Curso completo de n8n em português. Aprenda automação de workflows e integração de APIs." />
-    <meta property="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <!-- Structured Data for SEO -->
-    <script type="application/ld+json">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://jonathandacruz.com" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="n8n Tutorial em Português | Curso Completo de Automação" />
+  <meta property="og:description"
+    content="Aprenda n8n do zero com o curso mais completo em português. Tutorial de automação, workflows, APIs e projetos práticos." />
+  <meta property="og:url" content="https://jonathandacruz.com" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:title" content="n8n Tutorial em Português | Jonathan da Cruz" />
+  <meta property="twitter:description"
+    content="Curso completo de n8n em português. Aprenda automação de workflows e integração de APIs." />
+  <meta property="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-957X3N8FMK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-957X3N8FMK');
+  </script>
+
+
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Person",
@@ -51,10 +67,11 @@
       }
     }
     </script>
-  </head>
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
