--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     content="n8n, automação, workflow, tutorial n8n, curso n8n, n8n português, automação de processos, integração API, zapier alternativa, n8n tutorial, jonathan da cruz, n8n brasil, automação empresarial" />
 
   <!-- Favicon -->
-  <link rel="icon" href="/lovable-uploads/favicon-jc.png" type="image/png" />
+  <link rel="icon" href="/favicon.png" type="image/png" />
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://jonathandacruz.com" />
@@ -31,6 +31,8 @@
   <meta property="twitter:description"
     content="Curso completo de n8n em português. Aprenda automação de workflows e integração de APIs." />
   <meta property="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5686807883702519"
+     crossorigin="anonymous"></script>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-957X3N8FMK"></script>
